4.monitoring-healthcheck-backup-cluster/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.viettu.vn
      http:
        paths:
          - backend:
              service:
                name: 	devopseduvn-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
