4.monitoring-healthcheck-backup-cluster/grafana/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.viettu.vn
      http:
        paths:
          - backend:
              service:
                name: 	devopseduvn-operator
                port:
                  number: 9090
            path: /
            pathType: Prefix
